# M.J.Pins

./: .gitignore  README.md
backend/: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/development/: tests.ipynb
backend/development/assets/: card.jfif
backend/quick_wallet/: __init__.py  __main__.py
backend/quick_wallet/config/: __init__.py  settings.py
backend/quick_wallet/database/: __init__.py  alembic.ini
backend/quick_wallet/database/connection/: __init__.py  session.py
backend/quick_wallet/database/migration/: env.py
backend/quick_wallet/database/models/: __init__.py
backend/quick_wallet/endpoints/: __init__.py
backend/quick_wallet/endpoints/auth/: phone_auth.py  phone_auth_request.py
backend/quick_wallet/endpoints/cards/: add_standard_card.py  add_standart_card.py  add_unknown_card.py  delete_card.py  my_cards.py  quick_cards.py
backend/quick_wallet/endpoints/hard_test/: hard_test.py
backend/quick_wallet/endpoints/shops/: add_shop.py  add_similarity_data.py  delete_shop.py  get_categories.py  get_most_similar_shop.py  get_most_similar_shop_v1.py  get_shops.py
backend/quick_wallet/endpoints/wallets/: add_card_to_wallet.py  create_wallet.py  delete_card_from_wallet.py  delete_wallet.py  give_access_to_wallet.py  my_wallets.py  revoke_access.py
backend/quick_wallet/schemas/auth/: __init__.py  auth.py
backend/quick_wallet/schemas/base/: __init__.py  admin_request.py  authorized_request.py  base.py
backend/quick_wallet/schemas/cards/: __init__.py  add_card.py  base.py  quick_cards.py
backend/quick_wallet/schemas/misc/: __init__.py  color_rgb.py  similarity.py
backend/quick_wallet/schemas/shops/: __init__.py  add_shop.py  base.py  similarity.py
backend/quick_wallet/schemas/wallets/: __init__.py  access_to_wallet.py  base.py  card_wallet.py  create_wallet.py
backend/quick_wallet/services/access/: __init__.py  access_decorator.py
backend/quick_wallet/services/auth/: __init__.py  auth_manager.py
backend/quick_wallet/utils/: __init__.py
backend/tests/: conftest.py  database_async.py  utils.py
backend/tests/api_tests/: test_auth.py  test_cards.py
backend/tests/prepared_data/: __init__.py  data.py
(+134 files in other folders)
