[tool.poetry]
name = "quick_wallet"
version = "0.0.1"
description = ""
authors = ["Ivan Morgun <i.morgun@g.nsu.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
fastapi-pagination = "^0.11.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
